--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap");
 .app {
-  background-color: #f2f2f2; }
+  background-color: #f2f2f2;
+  font-family: 'B612', sans-serif; }
