initial styling added to landing

--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,3 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap');
 
-$off-white: hsl(0, 0%, 95%);
+$off-white: hsl(0, 0%, 98%);
+$text-highlight-blue: hsl(200, 100%, 40%);
+$text-highlight-purple: hsl(291, 100%, 55%);
