--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap");
 .app {
-  background-color: #f2f2f2;
-  font-family: 'B612', sans-serif; }
+  background-color: #fafafa;
+  font-family: 'B612', sans-serif;
+  min-width: 100vw;
+  min-height: 100vh; }
