mail padded and replaced with icon from react-icons. react-icons added as dependency

--- a/src/css/social.css
+++ b/src/css/social.css
@@ -2,3 +2,9 @@ nav {
   position: fixed;
   top: 5vh;
   right: 5vh; }
+  nav .react-icons {
+    color: black;
+    width: 2rem;
+    height: 2rem;
+    vertical-align: 'middle';
+    margin-left: 1rem; }
