--- a/src/css/social.css
+++ b/src/css/social.css
@@ -1,10 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap");
 nav {
+  display: flex;
   position: fixed;
   top: 5vh;
   right: 5vh; }
-  nav .react-icons {
-    color: black;
-    width: 2rem;
-    height: 2rem;
-    vertical-align: 'middle';
-    margin-left: 1rem; }
+  nav a {
+    display: grid;
+    place-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.4s; }
+    nav a .react-icons {
+      color: black;
+      width: 32px;
+      height: 32px;
+      vertical-align: 'middle'; }
+  nav a:hover {
+    background-color: #d9d9d9; }
+  nav a:first-child {
+    margin-right: 10px; }
