--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -4,3 +4,4 @@ $off-white: hsl(0, 0%, 98%);
 $text-highlight-blue: hsl(200, 100%, 40%);
 $text-highlight-purple: hsl(291, 100%, 55%);
 $darken-off-white: hsl(0, 0%, 85%);
+$dark-grey: hsl(0, 0%, 35%);
