--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,20 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap");
-main {
+.projects {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
   min-height: 100vh; }
-  main article {
+  .projects .home-button-a {
+    position: fixed;
+    top: 5vh;
+    left: 5vh;
+    display: grid;
+    place-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.4s; }
+    .projects .home-button-a .home-button {
+      color: black;
+      width: 32px;
+      height: 32px;
+      vertical-align: 'middle'; }
+  .projects .home-button-a:hover {
+    background-color: #d9d9d9; }
+  .projects article {
     width: 100%;
     display: grid;
     grid-template-rows: 1;
     grid-template-columns: 1fr 1fr;
     place-items: center; }
-    main article img {
+    .projects article img {
       grid-column: 1 / 3;
       width: 80%;
       box-shadow: 0 2px 6px #595959; }
-    main article a {
+    .projects article a {
       margin: 16px;
       padding: 5px;
       font-size: 20px;
