--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -1,10 +1,30 @@
 @import './variables/variables';
 
-main {
+.projects {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	width: 100%;
 	min-height: 100vh;
+	.home-button-a {
+		position: fixed;
+		top: 5vh;
+		left: 5vh;
+		display: grid;
+		place-items: center;
+		padding: 5px;
+		border-radius: 5px;
+		transition: all 0.4s;
+		.home-button {
+			color: black;
+			width: 32px;
+			height: 32px;
+			vertical-align: 'middle';
+		}
+	}
+	.home-button-a:hover {
+		background-color: $darken-off-white;
+	}
+
 	article {
 		width: 100%;
 		display: grid;
