--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -22,18 +22,20 @@
     background-color: #d9d9d9; }
   .projects article {
     width: 100%;
-    display: grid;
-    grid-template-rows: 1;
-    grid-template-columns: 1fr 1fr;
-    place-items: center; }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
     .projects article img {
       grid-column: 1 / 3;
       width: 80%;
       box-shadow: 0 2px 6px #595959; }
-    .projects article a {
-      margin: 16px;
-      padding: 5px;
-      font-size: 20px;
-      color: #dd1aff;
-      text-decoration: none;
-      border-radius: 5px; }
+    .projects article .links {
+      margin: 16px; }
+      .projects article .links a {
+        margin: 16px;
+        padding: 5px;
+        font-size: 20px;
+        color: #dd1aff;
+        text-decoration: none;
+        border-radius: 5px; }
