--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -5,19 +5,23 @@
   justify-content: center;
   align-items: center;
   min-width: 100%;
-  min-height: 90vh; }
+  min-height: 100vh; }
   .landing h1 {
+    margin: 100px 1rem 3rem;
     font-size: 5rem;
     font-weight: 700;
-    margin-bottom: 3rem; }
+    text-align: center; }
     .landing h1 span {
       color: #0088cc; }
   .landing h2 {
     font-size: 3rem;
-    margin-bottom: 3rem; }
+    margin: 0 1rem 3rem;
+    text-align: center; }
   .landing p {
+    margin: 0 1rem 100px;
     font-size: 2rem;
-    font-weight: 400; }
+    font-weight: 400;
+    text-align: center; }
     .landing p a {
       color: #dd1aff;
       text-decoration: none; }
