--- a/src/scss/landing.scss
+++ b/src/scss/landing.scss
@@ -6,22 +6,26 @@
 	justify-content: center;
 	align-items: center;
 	min-width: 100%;
-	min-height: 90vh;
+	min-height: 100vh;
 	h1 {
+		margin: 100px 1rem 3rem;
 		font-size: 5rem;
 		font-weight: 700;
-		margin-bottom: 3rem;
+		text-align: center;
 		span {
 			color: $text-highlight-blue;
 		}
 	}
 	h2 {
 		font-size: 3rem;
-		margin-bottom: 3rem;
+		margin: 0 1rem 3rem;
+		text-align: center;
 	}
 	p {
+		margin: 0 1rem 100px;
 		font-size: 2rem;
 		font-weight: 400;
+		text-align: center;
 		a {
 			color: $text-highlight-purple;
 			text-decoration: none;
