--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -2,6 +2,7 @@
 .projects {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  place-items: center;
   width: 100%;
   min-height: 100vh; }
   .projects .home-button-a {
@@ -21,21 +22,28 @@
   .projects .home-button-a:hover {
     background-color: #d9d9d9; }
   .projects article {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    width: 80%;
+    border-radius: 5px;
+    box-shadow: 0 2px 6px #8c8c8c;
+    overflow: hidden; }
     .projects article img {
       grid-column: 1 / 3;
-      width: 80%;
-      box-shadow: 0 2px 6px #595959; }
+      width: 100%; }
     .projects article .links {
-      margin: 16px; }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 16px;
+      background-color: #f1f3f4;
+      width: 100%;
+      height: 100%; }
       .projects article .links a {
-        margin: 16px;
+        margin: 0 10px;
         padding: 5px;
         font-size: 20px;
-        color: #dd1aff;
         text-decoration: none;
-        border-radius: 5px; }
+        color: #dd1aff; }
