--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -3,6 +3,7 @@
 .projects {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	place-items: center;
 	width: 100%;
 	min-height: 100vh;
 	.home-button-a {
@@ -26,25 +27,32 @@
 	}
 
 	article {
-		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		width: 80%;
+		border-radius: 5px;
+		box-shadow: 0 2px 6px $dark-grey;
+		overflow: hidden;
 		img {
 			grid-column: 1 / 3;
-			width: 80%;
-			box-shadow: 0 2px 6px $dark-grey;
+			width: 100%;
 		}
 		.links {
-			margin: 16px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 16px;
+			background-color: $lighter-blue;
+			width: 100%;
+			height: 100%;
 			a {
-				margin: 16px;
+				margin: 0 10px;
 				padding: 5px;
 				font-size: 20px;
-				color: $text-highlight-purple;
 				text-decoration: none;
-				border-radius: 5px;
+				color: $text-highlight-purple;
 			}
 		}
 	}
