box shadow made more subtle on projects

--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -33,7 +33,7 @@
 		align-items: center;
 		width: 80%;
 		border-radius: 5px;
-		box-shadow: 0 2px 6px $dark-grey;
+		box-shadow: 0 3px 7px $darken-off-white;
 		overflow: hidden;
 		img {
 			grid-column: 1 / 3;
