--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -28,7 +28,7 @@
     align-items: center;
     width: 80%;
     border-radius: 5px;
-    box-shadow: 0 2px 6px #8c8c8c;
+    box-shadow: 0 3px 7px #d9d9d9;
     overflow: hidden; }
     .projects article img {
       grid-column: 1 / 3;
